# mudirac

./: .buildinfo  .gitignore  CMakeLists.txt  CONTRIBUTING.md  GPATH  GRTAGS  GTAGS  LICENSE  Makefile  README.md  example.html  genindex.html  index.html  installation.html  keywords.html  objects.inv  search.html  searchindex.js  theory.html
.doctrees/: environment.pickle  example.doctree  index.doctree  installation.doctree  keywords.doctree  theory.doctree
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy-docs.yml  format.yml  test.yml
_sources/: example.rst.txt  index.rst.txt  installation.rst.txt  keywords.rst.txt  theory.rst.txt
docs/: .directory  DevelopmentGuide.bib  DevelopmentGuide.tex  Keywords.tex
docs/source/: conf.py  example.rst  index.rst  installation.rst  keywords.rst  theory.rst
doctrees/: environment.pickle  example.doctree  index.doctree  installation.doctree  keywords.doctree  theory.doctree
html/: genindex.html  objects.inv  searchindex.js
html/_static/: documentation_options.js
lib/: CMakeLists.txt  atom.cpp  atom.hpp  boundary.cpp  boundary.hpp  config.cpp  config.hpp  constants.hpp  debugtasks.cpp  debugtasks.hpp  econfigs.cpp  econfigs.hpp  elements.cpp  elements.hpp  experiment.cpp  experiment.hpp  hydrogenic.cpp  hydrogenic.hpp  input.cpp  input.hpp  integrate.cpp  integrate.hpp  log.cpp  log.hpp  optimisation.cpp  optimisation.hpp  output.cpp  output.hpp  parameterise.cpp  parameterise.hpp  potential.cpp  potential.hpp  state.cpp  state.hpp  transforms.cpp  transforms.hpp  utils.cpp  utils.hpp  wavefunction.cpp  wavefunction.hpp
src/: CMakeLists.txt  arbitrary_state.cpp  atom.cpp  atom.hpp  boundary.cpp  boundary.hpp  calc_Etrans.cpp  calc_elempot.cpp  calc_state.cpp  constants.hpp  eigenenergies.cpp  hydrogenic.cpp  hydrogenic.hpp  hydrogenic_print.cpp  input.cpp  input.hpp  integrate.cpp  integrate.hpp  kappa_a.cpp  map_E_basins.cpp  mudirac.cpp  mudirac.hpp  mudirac.in.hpp  nucsize.cpp  print_econf.cpp  single_state.cpp  size_effect.cpp  test_rkutta.cpp  utils.cpp  utils.hpp
test/: CMakeLists.txt  datapath.h.in  datapath.in.h  macros.hpp  test_atom.cpp  test_econfigs.cpp  test_elements.cpp  test_experiment.cpp  test_hydrogenic  test_hydrogenic.cpp  test_input.cpp  test_integrate  test_integrate.cpp  test_kappaa.cpp  test_lines.cpp  test_main.cpp  test_optimal.cpp  test_potential.cpp  test_transforms.cpp  test_utils  test_utils.cpp  test_wavefunction.cpp  tests
test/data/: genlag.h  genlag.py  inputtest.in
utils/: elements.in.hpp  gather_data.py
utils/dbcompile/: dbcompile.py
